# gedi_tiler

./: .gitignore  README.md  R_tiling_demo.ipynb  algorithm_config_template.yml  algorithm_config_tile_writer.yml  build-env.sh  check_tiles.py  dps_tile_builder.py  environment.yml  pyduck-environment.yml  pyproject.toml  run_dps_tile_builder.sh  run_gtiler.sh  tile_runner.py  tiling_demo.ipynb  update_tiles.py
demos/: tiling_demo.ipynb
gtiler/: constants.py  dps_tile_builder.py  setup_database.py  tile_runner.py
gtiler/common/: checkpoint_lib.py  cmr_query.py  granule_metadata.py  granule_name.py  jobs_manager.py  s3_utils.py  schema_parser.py  shape_parser.py
gtiler/data/: schema.yaml
gtiler/database/: ducky.R  ducky.py  schema.py  tiles.py
gtiler/database/query_lib/: crossovers.py
gtiler/tests/: test_checkpoint_lib.py  test_dps_tile_builder.py  test_granule_metadata.py
gtiler/tests/fixtures/: build_cmr_query_fixtures.py  build_granule_fixtures.py
gtiler/tests/fixtures/cmr_query/: level2A.pkl  level2B.pkl  level4A.pkl  level4C.pkl
gtiler/tests/fixtures/granules/: O15709_01_level2A.h5  O15709_01_level2B.h5  O15709_01_level4A.h5  O15709_01_level4C.h5  O20346_01_level2A.h5  O20346_01_level2B.h5  O20346_01_level4A.h5  O20346_01_level4C.h5
gtiler/tests/fixtures/metadata/tile_id=N00_W050/: data_0.parquet
scripts/: build_ducklake.py  check_tiles.py  dps_tile_builder.py  find_crossovers.py  tile_runner.py  update_tiles.py
